--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "gulp-base64",
-  "version": "0.1.3",
-  "description": "gulp task to encode images to data URI",
+  "name": "gulp-base64-updated",
+  "version": "0.1.4",
+  "description": "A fork from gulp-base64 from lack of response to security updates gulp task to encode images to data URI",
   "main": "index.js",
-  "homepage": "http://github.com/Wenqer/gulp-base64",
-  "repository": "git://github.com/Wenqer/gulp-base64.git",
+  "homepage": "https://github.com/MichaelJGW/gulp-base64",
+  "repository": "git://github.com/MichaelJGW/gulp-base64.git",
   "keywords": [
     "gulpplugin",
     "data-uri",
@@ -13,14 +13,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Yaroslav 2gis",
+  "author": "Yaroslav 2gis MichaelJGW",
   "license": "MIT",
   "dependencies": {
-    "through2": "~0.4.1",
-    "extend": "~1.2.1",
     "async": "~0.2.10",
-    "mime": "~1.2.11",
-    "request": "~2.33.0",
-    "buffers": "~0.1.1"
+    "buffers": "~0.1.1",
+    "mime": "^2.4.4",
+    "request": "^2.88.0",
+    "through2": "~0.4.1"
   }
 }
